src/test/resources/30/single/xhtml/valid/http-equiv-1.xhtml
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
  <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>TOC</title>
  </head>
  <body>
    <nav epub:type="toc" id="toc">
      <ol>
        <li>
          <a href="navigation.xhtml#toc">TOC</a>
        </li>
      </ol>
    </nav>
  </body>
</html>
